# learn_aws

./: .doit.db.db  .gitignore  .pre-commit-config.yaml  dodo.py  pyproject.toml
code/: pyproject.toml
infrastructure/cdk/: app.py  pyproject.toml
infrastructure/iac/: deploy.sh
infrastructure/iac/templates/: main_stack.yaml
