[tool.poetry]
name = "learn-aws"
version = "0.1.0"
description = "My AWS learning journey"
authors = ["Sanghyeon PARK"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.166.0"
boto3 = "^1.26.138"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
moto = "^5.0.8"
pytest = "^8.2.1" 
pre-commit = "^3.7"
doit = "^0.36.0"
black = "^24.4"
flake8 = "^7.1.1"
isort = "^5.13"
git-changelog = "==2.5.2"
toml = "^0.10.2"
boto3-stubs  = {extras = ["iam", "s3", "dynamodb"], version = "^1.34.121"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"