[tool.poetry]
name = "learn-aws-code"
version = "0.1.0"
description = "Code for my AWS learning journey"
authors = ["Sanghyeon PARK"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.26.138"
boto3-stubs  = {extras = ["iam", "s3", "dynamodb"], version = "^1.34.121"}

[tool.poetry.dev-dependencies]
moto = "^5.0.8"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"